examples/pos/exponential/bob.oio
BOB

channel
    #reach [BOB/B1;ALICE/A2;BOB/B2]
    #cost 3
    #overhead 11
    ALICE/A1@{H} : int@{H};

channel 
    #reach [BOB/B2]
    #cost 1
    #overhead 1
    ALICE/A2@{H} : int@{H};

var bobs_secret : int@{H} = 0;

#reach [ALICE/A1;BOB/B1;ALICE/A2;BOB/B2]
#cost 4
#overhead 11
START@{} (i : int@{}) {
    send(ALICE/A1, bobs_secret);
}

#reach [ALICE/A2;BOB/B2]
#cost 2
#overhead 4
B1@{H} (secret : int@{H}) {
    oblif secret
    then send(ALICE/A2, secret+1);
    else send(ALICE/A2, secret-1);
}

B2@{H} (secret : int@{H}) {
    print("BOB/B2 received secret", secret);
}
