examples/neg/high_loop_grow/bob.oio
BOB

channel ALICE/A1@{H} : int@{H} [ALICE/A1: 1;BOB/B1: 1;ALICE/A2: 1;BOB/B2: 1];

channel ALICE/A2@{H} : int@{H} [ALICE/A2: 1;BOB/B2: 1];

var bobs_secret : int@{H} = 0;

START@{} (i : int@{}) [ALICE/A1: 1;BOB/B1: 1;ALICE/A2: 1;BOB/B2: 1] {
    send(ALICE/A1, bobs_secret);
}

B1@{H} (secret : int@{H}) [ALICE/A1: 1;BOB/B1: 1;ALICE/A2: 1;BOB/B2: 1] {
    oblif 0
    then send(ALICE/A1, secret);
    else skip;
}

B2@{H} (secret : int@{H}) [ALICE/A2: 1;BOB/B2: 1] {
    print("BOB/B2 received", secret);
    send(ALICE/A2, secret);
}
